--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "smooth-scroll": "^16.1.3"
-  },
+  "dependencies": {},
   "devDependencies": {
     "node-sass": "^4.14.0"
   }
