--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "rellax": "^1.12.1"
+  },
   "devDependencies": {
     "node-sass": "^4.14.0"
   }
